--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,15 +1,23 @@
 <h1>Images List</h1>
  
+<%= link_to 'New Image', new_image_path %>
+
 <table>
   <tr>
     <th>Title</th>
     <th>Description</th>
+    <th colspan="3"></th>
   </tr>
  
   <% @images.each do |image| %>
     <tr>
       <td><%= image.title %></td>
       <td><%= image.description %></td>
+      <td><%= link_to 'Show', image_path(image) %></td>
+      <td><%= link_to 'Edit', edit_image_path(image) %></td>
+      <td><%= link_to 'Destroy', image_path(image),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
 </table>
