--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,17 +1,5 @@
 <h1>New Image</h1>
 
-<%= form_for :image, url: images_path do |f| %>
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
- 
-  <p>
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </p>
- 
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<%= render 'form' %>
+
+<%= link_to 'Return to Images List', images_path %>
