Added navbar. Added table and form styling.

--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -13,18 +13,18 @@
     </div>
   <% end %>
  
-  <p>
+  <div class="form-group">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
-  </p>
+  </div>
  
-  <p>
+  <div class="form-group">
     <%= f.label :description %><br>
     <%= f.text_area :description %>
-  </p>
+  </div>
  
-  <p>
+  <div class="form-group">
     <%= f.submit %>
-  </p>
+  </div>
  
 <% end %>
