--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -2,7 +2,7 @@
  
 <%= link_to 'New Image', new_image_path %>
 
-<table>
+<table class="table table-striped">
   <tr>
     <th>Title</th>
     <th>Description</th>
