--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"
 <head>
   <title>Oregon Images</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
+<%= render partial: 'shared/nav' %>
+
+<div class="container-fluid">
+
 <%= yield %>
+
+</div>
 
 </body>
 </html>
