--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -11,11 +11,11 @@
  
   <% @images.each do |image| %>
     <tr>
-      <td><%= image.title %></td>
+      <td><%= link_to image.title, image_path(image) %></td>
       <td><%= image.description %></td>
-      <td><%= link_to 'Show', image_path(image) %></td>
+      <td><%= link_to 'View', image_path(image) %></td>
       <td><%= link_to 'Edit', edit_image_path(image) %></td>
-      <td><%= link_to 'Destroy', image_path(image),
+      <td><%= link_to 'Delete', image_path(image),
               method: :delete,
               data: { confirm: 'Are you sure?' } %></td>
     </tr>
