--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,25 +1,31 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
 
-<div class="navbar-header">
-  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-    <span class="sr-only">Toggle navigation</span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-    <span class="icon-bar"></span>
-  </button>
-  <a class="navbar-brand" href="/">Oregon Images</a>
-</div>
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Oregon Images</a>
+    </div>
 
-<!-- Collect the nav links, forms, and other content for toggling -->
-<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-  <ul class="nav navbar-nav">
-    <li><a href="/">Home <span class="sr-only">(current)</span></a></li>
-    <li><a href="/locations">Locations</a></li>
-    <li><a href="/culturalproperties">Cultural Properties</a></li>
-    <li><a href="/images">Images</a></li>
-  </ul>
-</div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home <span class="sr-only">(current)</span></a></li>
+        <li><%#= link_to "Locations", locations_path %></li>
+        <li><%= link_to "Cultural Properties", cultural_properties_path %></li>
+        <li><%= link_to "Images", images_path %></li>
+      </ul>
 
+      <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="">
+        </div>
+        <button type="submit" class="btn btn-default">Search</button>
+      </form>
+    </div>
   </div>
 </nav>
