Added Location model, controller and views.

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/">Home <span class="sr-only">(current)</span></a></li>
-        <li><%#= link_to "Locations", locations_path %></li>
+        <li><%= link_to "Locations", locations_path %></li>
         <li><%= link_to "Cultural Properties", cultural_properties_path %></li>
         <li><%= link_to "Images", images_path %></li>
       </ul>
