Expanded Location fields.

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -22,6 +22,21 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+
+  <div class="form-group">
+    <%= f.label :county %><br>
+    <%= f.text_field :county %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :lat %><br>
+    <%= f.number_field :lat, :class => 'text_field', :step => 'any' %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :lng %><br>
+    <%= f.number_field :lng, :class => 'text_field', :step => 'any' %>
+  </div>
  
   <div class="form-group">
     <%= f.submit %>
