Added Paperclip gem for image attachments.

--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @image do |f| %>
+<%= form_for @image, html: {multipart: true} do |f| %>
  
   <% if @image.errors.any? %>
     <div id="error_explanation">
@@ -12,6 +12,11 @@
       </ul>
     </div>
   <% end %>
+
+  <div class="form-group">
+    <%= f.label :picture %><br>
+    <%= f.file_field :picture %>
+  </div>
  
   <div class="form-group">
     <%= f.label :title %><br>
