Fixed cultural property values. Disabled search bar.

--- a/app/views/cultural_properties/index.html.erb
+++ b/app/views/cultural_properties/index.html.erb
@@ -15,7 +15,7 @@
       <td><%= cp.description %></td>
       <td><%= link_to 'View', cultural_property_path(cp) %></td>
       <td><%= link_to 'Edit', edit_cultural_property_path(cp) %></td>
-      <td><%= link_to 'Delete', cutural_property_path(cp),
+      <td><%= link_to 'Delete', cultural_property_path(cp),
               method: :delete,
               data: { confirm: 'Are you sure?' } %></td>
     </tr>
