--- a/app/views/cultural_properties/show.html.erb
+++ b/app/views/cultural_properties/show.html.erb
@@ -8,4 +8,25 @@
   <%= @cp.description %>
 </p>
 
-<%= link_to 'Return to Cultural Properties List', cultural_properties_path %>
+<% Image.where(:cultural_property_id => @cp).in_groups_of(3).each do |image_array| %>
+  <div class="row">
+
+    <% image_array.each do |image| %>
+      <% if !image.nil? %>
+        <div class="col-sm-6 col-md-4">
+          <div class="thumbnail">
+            <%= link_to (image_tag image.picture.url(:thumb)), image_path(image) %>
+            <div class="caption">
+              <h4><%= image.title %></h4>
+              <p><%= image.description %></p>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    <% end %>
+
+  </div>
+<% end %>
+
+
+<p><%= link_to 'Return to Cultural Properties List', cultural_properties_path %></p>
