--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -27,6 +27,15 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+
+  <div class="form-group">
+    <%= f.label :cultural_property_id %>
+    <%= f.select(:cultural_property_id, @image.cultural_property_id, class: 'form-control') do %>
+      <% CulturalProperty.all.each do |cp| %>
+        <%= content_tag(:option, cp.title, value: cp.id) %>
+      <% end %>
+    <% end %>
+  </div>
  
   <div class="form-group">
     <%= f.submit %>
