--- a/app/views/cultural_properties/_form.html.erb
+++ b/app/views/cultural_properties/_form.html.erb
@@ -22,6 +22,15 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+
+  <div class="form-group">
+    <%= f.label :location_id %>
+    <%= f.select(:location_id, @cp.location_id, class: 'form-control') do %>
+      <% Location.all.each do |loc| %>
+        <%= content_tag(:option, loc.title, value: loc.id) %>
+      <% end %>
+    <% end %>
+  </div>
  
   <div class="form-group">
     <%= f.submit %>
