--- a/app/views/cultural_properties/index.html.erb
+++ b/app/views/cultural_properties/index.html.erb
@@ -6,6 +6,7 @@
   <tr>
     <th>Title</th>
     <th>Description</th>
+    <th>Location</th>
     <th>Image Count</th>
     <th colspan="3"></th>
   </tr>
@@ -14,6 +15,7 @@
     <tr>
       <td><%= link_to cp.title, cultural_property_path(cp) %></td>
       <td><%= cp.description %></td>
+      <td><%= link_to (Location.find(cp.location_id).title), location_path(Location.find(cp.location_id)) if cp.location_id %></td>
       <td><%= link_to (Image.where(:cultural_property_id => cp).count), cultural_property_path(cp) %></td>
       <td><%= link_to 'View', cultural_property_path(cp) %></td>
       <td><%= link_to 'Edit', edit_cultural_property_path(cp) %></td>
