--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -7,6 +7,7 @@
     <th>Image</th>
     <th>Title</th>
     <th>Description</th>
+    <th>Cultural Property</th>
     <th colspan="3"></th>
   </tr>
  
@@ -15,6 +16,7 @@
       <td><%= link_to (image_tag image.picture.url(:thumb)), image_path(image) %></td>
       <td><%= link_to image.title, image_path(image) %></td>
       <td><%= image.description %></td>
+      <td><%= link_to CulturalProperty.find(image.cultural_property_id).title, cultural_property_path(CulturalProperty.find(image.cultural_property_id)) if image.cultural_property_id %></td>
       <td><%= link_to 'View', image_path(image) %></td>
       <td><%= link_to 'Edit', edit_image_path(image) %></td>
       <td><%= link_to 'Delete', image_path(image),
